# scrubvae

./: .gitignore  2D_cluster_consistency.py  LICENSE  README.md  babel.py  base_path.py  environment.yml  gen_restrictiveness.py  get_gmm_ll.py  lossplot.py  mi_demo.py  moving_avg_test.py  plot_all_reg.py  plot_gmm.py  plot_regression.py  profile_output.lprof  profile_output.txt  profile_output_2024-09-20T172253.txt  pyproject.toml  test.py  test_disentangle.py  test_gmm_ll.py  test_invariant.py  test_parts.py  test_spd_aug.py  train_mcmi.py  train_model.py  train_test.py  vis_2D_reconstruction.py  vis_cluster_dist.py  vis_datadiff.py  vis_epoch_losses.py  vis_epoch_mcmi.py  vis_epoch_metric.py  vis_epoch_pd.py  vis_epoch_regression.py  vis_latent_traverse.py  vis_latents.py  vis_reconstruction.py  vis_traversal.py  (+1 more)
batch/: get_gmm.sh  plt_reg.sh  train.sh  train_hier.sh  vis_latents.sh
configs/: avgspd_rc_w51_360_full.yaml  avgspd_rc_w51_midfwd_full.yaml  di_rc_w51_midfwd_full.yaml  di_w51_360_full.yaml  hr_w51_midfwd_full.yaml  mouse_skeleton.yaml  rc_w51_360_full.yaml  rc_w51_midfwd_full.yaml  tr_w51_360_full.yaml
data/: dataset.py  quaternion.py  test_rotate.py
demo/: distributed_train.py
docs/: index.html  package-lock.json  package.json
evaluate/: cluster.py  get.py
github_pages/: README.md
model/: LinearDisentangle.py  TransformerVAE.py  get.py
plot/: constants.py  plot.py
scripts/: distributed_train.py  gen_restrictiveness.py  get_gmm_ll.py  prepare_save_data.py  train_val_test_split.py  vis_cluster_dist.py  vis_epoch_metric.py  vis_epoch_pd.py  (+4 more)
(+154 files in other folders)
