[project]
name = "scrubvae"
version = "0.1_dev"
authors = [
  { name="Joshua H. Wu", email="joshua.wu@duke.edu" },
]
description = "3D Behavioral Analysis of Action Skeletons"
readme = "README.md"
requires-python = ">=3.9"
license ={file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/joshuahwu/scrubvae"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/scrubvae/version.py"
version_scheme = 'python-simplified-semver'
local_scheme = 'no-local-version'

# [project.optional-dependencies]
# docs = [
#     "mkdocs",
#     "mkdocstrings[python]",
#     "mkdocs_section_index",
#     "mkdocs_gen_files",
#     "mkdocs_literate_nav",
#     "mkdocs-gallery",
# ]